--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="header">
             <img src="./images/__logo.png" alt="россия">
             <div class="header__lang">
-                <a href="#" class="header__link_ru" target="_blank">ru</a>
-                <a href="#" class="header__link_en" target="_blank">en</a>
+                <a href="#" class="header__link" target="_blank">Ru</a>
+                <a href="#" class="header__link header__link_en" target="_blank">En</a>
             </div>
         </header>
         <main class="content">
