--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img src="./images/__logo.png" alt="россия">
+            <img src="./images/__logo.png" alt="россия" class="header__image">
             <div class="header__lang">
                 <a href="#" class="header__link" target="_blank">Ru</a>
                 <a href="#" class="header__link header__link_en" target="_blank">En</a>
