--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./pages/index.css">
     
 </head>
-<body>
+<body class="body">
     <div class="page">
         <header class="header">
             <img src="./images/__logo.svg" alt="россия" class="header__image">
