--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Документ</title>
     <link rel="stylesheet" href="./pages/index.css">
 
 </head>
@@ -15,21 +15,24 @@
             <img src="./images/__logo.svg" alt="россия" class="header__image">
             <div class="header__lang">
                 <a href="#" class="header__link header__link_line" target="_blank">Ru</a>
-                <a href="#" class="header__link" target="_blank">En</a>
+                <a href="#" class="header__link" target="_self">En</a>
             </div>
         </header>
         <main class="content">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
-                <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-                <img src="./images/__image.png" alt="okno" class="lead__image">
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <img src="./images/__image.png" alt="окно" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
+
             </section>
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян
                     и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила
-                    их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+                    их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+                </p>
+
                 <ul class="intro__list">
                     <li><span class="intro__list-bold">Часовых поясов</span> 11</li>
                     <li><span class="intro__list-bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
@@ -53,93 +56,109 @@
                 <img src="./images/grid/__item_11.png" alt="ущелье" class="photo-grid__image">
                 <img src="./images/grid/__item_12.png" alt="туман" class="photo-grid__image">
             </section>
-            <section class="place">
+            <section class="places">
 
 
 
-                <h2 class="place__title">Куршская коса</h2>
-                <div class="place__heading-url">
-                    <p class="place__heading">URL</p>
-                    <a href="http://park-kosa.ru" class="place__website" target="_blank">park-kosa.ru</a>
-                </div>
-                <img src="./images/kosa.png" alt="берег" class="place__image">
+                <div class="place">
+
+                    <h2 class="place__title">Куршская коса</h2>
+                    <div class="place__heading-url">
+                        <p class="place__heading">URL</p>
+
+                        <a href="http://park-kosa.ru" class="place__website" target="_blank">park-kosa.ru</a>
+                    </div>
+                    <img src="./images/kosa.png" alt="берег" class="place__image">
 
 
-                <div class="place__article">
-                    <p class="place__store">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                    <p class="place__store">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних
-                        мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                    <div class="place__article">
+                        <p class="place__store">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                        <p class="place__store">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних
+                            мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
 
-                </div>
-
-
-
-                <h2 class="place__title">Кольский</h2>
-                <div class="place__heading-url">
-                    <p class="place__heading">URL</p>
-
-                    <a href=" https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website" target="_blank">National Geographic</a>
-                </div>
-                <img src="./images/kolskii.png" alt="холм" class="place__image">
-
-
-                <div class="place__article">
-
-                    <p class="place__store">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                    <p class="place__store">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную
-                        кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+                    </div>
                 </div>
 
 
+                <div class="place">
+
+                    <h2 class="place__title">Кольский</h2>
+                    <div class="place__heading-url">
+                        <p class="place__heading">URL</p>
+
+                        <a href=" https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website" target="_blank">National Geographic</a>
+                    </div>
+                    <img src="./images/kolskii.png" alt="холм" class="place__image">
 
 
-                <h2 class="place__title">Алтай</h2>
-                <div class="place__heading-url">
-                    <p class="place__heading">URL</p>
-                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website" target="_blank">Facebook</a>
-                </div>
-                <img src="./images/altai.png" alt="лес" class="place__image">
+                    <div class="place__article">
 
-                <div class="place__article">
+                        <p class="place__store">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                        <p class="place__store">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей
+                            земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+                    </div>
 
-                    <p class="place__store">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
-                        здешних мест — горным воздухом.</p>
-                    <p class="place__store">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже
-                        обитатели Алтайского края.</p>
-                </div>
-
-
-
-
-                <h2 class="place__title">Зимний Байкал</h2>
-                <div class="place__heading-url">
-                    <p class="place__heading">URL</p>
-                    <a href="https://vk.com/baikalmile" class="place__website" target="_blank">https://vk.com/baikalmile</a>
-                </div>
-                <img src="./images/zimnii_baikal.png" alt="лёд" class="place__image">
-
-                <div class="place__article">
-
-                    <p class="place__store">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-                    <p class="place__store">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
-                        фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
 
 
+                <div class="place">
 
+                    <h2 class="place__title">Алтай</h2>
+                    <div class="place__heading-url">
+                        <p class="place__heading">URL</p>
 
-                <h2 class="place__title">Карелия</h2>
-                <div class="place__heading-url">
-                    <p class="place__heading">URL</p>
-                    <a href="http://vodlozero.ru" class="place__website" target="_blank">park-kosa.ru</a>
+                        <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website" target="_blank">Facebook</a>
+                    </div>
+                    <img src="./images/altai.png" alt="лес" class="place__image">
+
+                    <div class="place__article">
+
+                        <p class="place__store">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
+                            чудом здешних мест — горным воздухом.</p>
+                        <p class="place__store">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже
+                            обитатели Алтайского края.</p>
+                    </div>
+
                 </div>
-                <img src="./images/kareliya.png" alt="карелия" class="place__image">
 
-                <div class="place__article">
 
-                    <p class="place__store">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
-                        топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-                        в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                <div class="place">
+
+                    <h2 class="place__title">Зимний Байкал</h2>
+                    <div class="place__heading-url">
+                        <p class="place__heading">URL</p>
+
+                        <a href="https://vk.com/baikalmile" class="place__website" target="_blank">https://vk.com/baikalmile</a>
+                    </div>
+                    <img src="./images/zimnii_baikal.png" alt="лёд" class="place__image">
+
+                    <div class="place__article">
+
+                        <p class="place__store">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                        <p class="place__store">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года
+                            на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                    </div>
+
+
+                </div>
+
+                <div class="place">
+
+
+                    <h2 class="place__title">Карелия</h2>
+                    <div class="place__heading-url">
+                        <p class="place__heading">URL</p>
+
+                        <a href="http://vodlozero.ru" class="place__website" target="_blank">http://vodlozero.ru/</a>
+                    </div>
+                    <img src="./images/kareliya.png" alt="карелия" class="place__image">
+
+                    <div class="place__article">
+
+                        <p class="place__store">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не
+                            знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках
+                            деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                    </div>
                 </div>
 
             </section>
@@ -149,7 +168,7 @@
                 <a href=" https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
 
 
-                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 
                 </a>
